--- a/kitx_anhttp/build.gradle
+++ b/kitx_anhttp/build.gradle
@@ -4,8 +4,8 @@ def anhttp = rootProject.ext.kitx.anhttp
 
 if (anhttp.bintray) {
     apply plugin: 'com.github.dcendents.android-maven'
-    group='com.github.ymex'
-    version = "${anhttp.name}-v${anhttp.version}"
+    group = "${rootProject.ext.github}"
+    version = "${anhttp.version}"
 }
 
 dependencies {
