--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,13 @@ android {
     compileSdkVersion 30
     defaultConfig {
         applicationId "cn.ymex.kitx.sample"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+
+        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
             abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
@@ -60,6 +63,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.activity:activity-ktx:1.1.0"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -69,6 +73,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     api project(path: ':kitx-start')
+    api project(path: ':kitx-tps-umeng')
 
-    //api 'cn.ymex.kitx:kitx-start:0.1.1'
+//    api 'cn.ymex.kitx:kitx-start:0.1.2'
+//    api 'cn.ymex.kitx:kitx-tps-umeng:0.1.2'
 }
