--- a/kitx-tps-umeng/build.gradle
+++ b/kitx-tps-umeng/build.gradle
@@ -35,22 +35,28 @@ dependencies {
     //集成U-APM（可选）
     implementation 'com.umeng.umsdk:apm:1.1.1'
 
-
     //厂商推送依赖-小米
     implementation 'com.umeng.umsdk:xiaomi-push:3.8.5'
     implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.2.1'
 
     //厂商推送依赖-华为
-    implementation 'com.huawei.hms:push:5.0.4.302'
-    implementation 'com.umeng.umsdk:huawei-umengaccs:1.3.1'
+//    implementation 'com.huawei.hms:push:5.0.4.302'
+//    implementation 'com.umeng.umsdk:huawei-umengaccs:1.3.1'
+    //以上依赖要求版本在17以上，难搞哟
+    implementation 'com.umeng.umsdk:huawei-basetb:2.6.3.306'
+    implementation 'com.umeng.umsdk:huawei-pushtb:2.6.3.306'
+    implementation 'com.umeng.umsdk:huawei-umengaccs:1.2.4'
+
 
     //厂商推送依赖-魅族
     implementation 'com.umeng.umsdk:meizu-push:4.0.2'
     implementation 'com.umeng.umsdk:meizu-umengaccs:1.1.3'
 
     //厂商推送依赖-OPPO
-    implementation 'com.umeng.umsdk:oppo-push:2.1.0'
+//    implementation 'com.umeng.umsdk:oppo-push:2.1.0'//版本要求为16+
     implementation 'com.umeng.umsdk:oppo-umengaccs:1.0.7-fix'
+    implementation 'com.umeng.umsdk:oppo-push:2.0.2'
+//    implementation 'com.umeng.umsdk:oppo-umengaccs:1.0.6'
 
     //厂商推送依赖-VIVO
     implementation 'com.umeng.umsdk:vivo-push:2.9.0'
