--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include ':kitx-widget'
 include ':kitx-glide'
 include ':kitx-webview'
 include ':kitx-anhttp'
-include ':kitx-start'
+include ':kitx-app-start'
 include ':kitx-tips'
 include ':kitx-tps-umeng'
 rootProject.name='ymex.kitx'
