--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    api project(path: ':kitx-start')
+    api project(path: ':kitx-app-start')
     api project(path: ':kitx-tps-umeng')
 
 //    api 'cn.ymex.kitx:kitx-start:0.1.2'
