--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ ext {
                     version: "1.0.2",
                     bintray: true
             ],
+//            widget_ktx : [
+//                    version: "0.0.1",
+//                    bintray: true
+//            ],
             umeng :[
                     version: "0.0.3",
                     bintray: true
