--- a/build.gradle
+++ b/build.gradle
@@ -1,69 +1,84 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
-    github = "com.github.ymex.kitx"
+    github = "cn.ymex.kitx"
 
     kitx = [
             anhttp : [
-                    version: "1.0.4",
+                    name:"anhttp",
+                    version: "1.0.6",
                     bintray: true
             ],
             core   : [
+                    name:"core",
                     version: "1.0.5",
-                    bintray: true
+                    bintray: false
             ],
             glide  : [
+                    name:"glide",
                     version: "1.0.0",
-                    bintray: true
+                    bintray: false
             ],
             tips   : [
+                    name:"tips",
                     version: "0.0.6",
-                    bintray: true
+                    bintray: false
             ],
             webview: [
+                    name:"webview",
                     version: "1.0.0",
-                    bintray: true
+                    bintray: false
             ],
             widget : [
+                    name:"widget",
                     version: "1.0.2",
-                    bintray: true
+                    bintray: false
             ],
-//            widget_ktx : [
-//                    version: "0.0.1",
-//                    bintray: true
-//            ],
             umeng :[
+                    name:"umeng",
                     version: "0.0.3",
-                    bintray: true
+                    bintray: false
             ],
             start  : [
+                    name:"start",
                     version: "0.1.1",
-                    bintray: true
+                    bintray: false
             ]
     ]
 }
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.5.31'
     repositories {
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/central'}
+        maven{ url 'https://maven.aliyun.com/repository/google'}
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+
+        maven { url 'https://www.jitpack.io' }
         google()
-        jcenter()
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        mavenCentral()
+
         maven { url 'https://developer.huawei.com/repo/'}
+        maven { url 'https://repo1.maven.org/maven2/' }
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.huawei.agconnect:agcp:1.4.2.300'
     }
 }
 
 allprojects {
     repositories {
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/central'}
+        maven{ url 'https://maven.aliyun.com/repository/google'}
+        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+
+        maven { url 'https://www.jitpack.io' }
         google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
+        mavenCentral()
+
         maven { url 'https://developer.huawei.com/repo/'}
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
     }
 
     tasks.withType(Javadoc) {
