--- a/kitx-glide/build.gradle
+++ b/kitx-glide/build.gradle
@@ -11,7 +11,7 @@ android {
 def glide = rootProject.ext.kitx.glide
 
 if (glide.bintray) {
-    apply plugin: 'com.github.dcendents.android-maven'
+    apply plugin: 'maven-publish'
     group = "${rootProject.ext.github}"
     version = "${glide.version}"
 }
