--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
-    github = "cn.ymex.kitx"
+    github = "com.github.ymex.kitx"
 
     kitx = [
             anhttp : [
                     name:"anhttp",
-                    version: "1.0.6",
+                    version: "1.0.6.22",
                     bintray: true
             ],
             core   : [
