--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility sourceCompatibility
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     def sign =  {
