--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,12 @@ android {
     }
     //编译环境
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
+//        jvmTarget = '1.8'
     }
 
     compileOptions {
-        sourceCompatibility sourceCompatibility
+        sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
 
