--- a/kitx-anhttp/build.gradle
+++ b/kitx-anhttp/build.gradle
@@ -4,20 +4,24 @@ def anhttp = rootProject.ext.kitx.anhttp
 
 if (anhttp.bintray) {
     apply plugin: 'maven-publish'
-//    group = "${rootProject.ext.github}"
-//    version = "${anhttp.version}"
+    group = "${rootProject.ext.github}"
+    version = "${anhttp.version}"
 
     afterEvaluate {
         publishing {
             publications {
                 release(MavenPublication) {
                     from components.release
-                    groupId = "${rootProject.ext.github}"
+                    groupId = "${rootProject.ext.lib}"
                     artifactId = "${anhttp.name}"
                     version = "${anhttp.version}"
                 }
             }
         }
+    }
+    task generateSourcesJar(type: Jar) {
+        from android.sourceSets.main.java.srcDirs
+        classifier 'sources'
     }
 }
 
