--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
     github = "com.github.ymex.kitx"
+    lib = "com.ymex.kitx"
 
     kitx = [
             anhttp : [
                     name:"anhttp",
-                    version: "1.0.6.22",
+                    version: "1.0.7",
                     bintray: true
             ],
             core   : [
                     name:"core",
-                    version: "1.0.5",
-                    bintray: false
+                    version: "1.0.6",
+                    bintray: true
             ],
             glide  : [
                     name:"glide",
