--- a/kitx-core/build.gradle
+++ b/kitx-core/build.gradle
@@ -6,6 +6,23 @@ if (core.bintray) {
     apply plugin: 'maven-publish'
     group = "${rootProject.ext.github}"
     version = "${core.version}"
+
+    afterEvaluate {
+        publishing {
+            publications {
+                release(MavenPublication) {
+                    from components.release
+                    groupId = "${rootProject.ext.lib}"
+                    artifactId = "${core.name}"
+                    version = "${core.version}"
+                }
+            }
+        }
+    }
+    task generateSourcesJar(type: Jar) {
+        from android.sourceSets.main.java.srcDirs
+        classifier 'sources'
+    }
 }
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
