--- a/kitx-webview/build.gradle
+++ b/kitx-webview/build.gradle
@@ -14,6 +14,23 @@ if (webview.bintray) {
     apply plugin: 'maven-publish'
     group = "${rootProject.ext.github}"
     version = "${webview.version}"
+
+    afterEvaluate {
+        publishing {
+            publications {
+                release(MavenPublication) {
+                    from components.release
+                    groupId = "${rootProject.ext.lib}"
+                    artifactId = "${webview.name}"
+                    version = "${webview.version}"
+                }
+            }
+        }
+    }
+    task generateSourcesJar(type: Jar) {
+        from android.sourceSets.main.java.srcDirs
+        classifier 'sources'
+    }
 }
 
 dependencies {
