rename lib tips -> snippet

--- a/build.gradle
+++ b/build.gradle
@@ -5,42 +5,42 @@ ext {
 
     kitx = [
             anhttp : [
-                    name:"anhttp",
+                    name   : "anhttp",
                     version: "1.0.7",
                     bintray: true
             ],
             core   : [
-                    name:"core",
+                    name   : "core",
                     version: "1.0.6",
                     bintray: true
             ],
             glide  : [
-                    name:"glide",
+                    name   : "glide",
                     version: "1.0.0",
                     bintray: true
             ],
-            tips   : [
-                    name:"tips",
+            snippet: [
+                    name   : "snippet",
                     version: "0.0.6",
                     bintray: true
             ],
             webview: [
-                    name:"webview",
+                    name   : "webview",
                     version: "1.0.0",
                     bintray: true
             ],
             widget : [
-                    name:"widget",
+                    name   : "widget",
                     version: "1.0.2",
                     bintray: true
             ],
-            umeng :[
-                    name:"umeng",
+            umeng  : [
+                    name   : "umeng",
                     version: "0.0.3",
                     bintray: true
             ],
             start  : [
-                    name:"start",
+                    name   : "start",
                     version: "0.1.1",
                     bintray: true
             ]
@@ -49,15 +49,15 @@ ext {
 buildscript {
     ext.kotlin_version = '1.5.31'
     repositories {
-        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/central'}
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/central' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
 
         maven { url 'https://www.jitpack.io' }
         google()
         mavenCentral()
 
-        maven { url 'https://developer.huawei.com/repo/'}
+        maven { url 'https://developer.huawei.com/repo/' }
         maven { url 'https://repo1.maven.org/maven2/' }
 
     }
@@ -70,15 +70,15 @@ buildscript {
 
 allprojects {
     repositories {
-        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/central'}
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/central' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
 
         maven { url 'https://www.jitpack.io' }
         google()
         mavenCentral()
 
-        maven { url 'https://developer.huawei.com/repo/'}
+        maven { url 'https://developer.huawei.com/repo/' }
         maven { url 'https://repo1.maven.org/maven2/' }
     }
 
