--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,6 @@ include ':kitx-glide'
 include ':kitx-webview'
 include ':kitx-anhttp'
 include ':kitx-app-start'
-include ':kitx-tips'
+include ':kitx-snippet'
 include ':kitx-tps-umeng'
 rootProject.name='ymex.kitx'
