--- a/kitx-snippet/build.gradle
+++ b/kitx-snippet/build.gradle
@@ -1,11 +1,11 @@
 apply from: "../build.lib_kt.gradle"
 
-def start = rootProject.ext.kitx.start
+def snippet = rootProject.ext.kitx.snippet
 
-if (start.bintray) {
+if (snippet.bintray) {
     apply plugin: 'maven-publish'
     group = "${rootProject.ext.github}"
-    version = "${start.version}"
+    version = "${snippet.version}"
 
     afterEvaluate {
         publishing {
@@ -13,8 +13,8 @@ if (start.bintray) {
                 release(MavenPublication) {
                     from components.release
                     groupId = "${rootProject.ext.lib}"
-                    artifactId = "${start.name}"
-                    version = "${start.version}"
+                    artifactId = "${snippet.name}"
+                    version = "${snippet.version}"
                 }
             }
         }
@@ -25,30 +25,12 @@ if (start.bintray) {
     }
 }
 
-android {
-    buildFeatures {
-        viewBinding = true
-    }
-}
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation 'androidx.core:core-ktx:1.3.2'
-
-
-    api project(path: ':kitx-snippet')
-    api project(path: ':kitx-core')
-    api project(path: ':kitx-widget')
-    api project(path: ':kitx-webview')
-    api project(path: ':kitx-glide')
-    api project(path: ':kitx-anhttp')
-
-    api "org.greenrobot:eventbus:3.2.0"
-
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
