--- a/kitx-tps-umeng/src/main/AndroidManifest.xml
+++ b/kitx-tps-umeng/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
 
         <receiver
             android:name="com.taobao.accs.EventReceiver"
-            android:process=":channel">
+            android:process=":channel"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -63,6 +64,7 @@
         </receiver>
 
         <receiver
+            android:exported="true"
             android:name="com.taobao.accs.ServiceReceiver"
             android:process=":channel">
             <intent-filter>
@@ -74,11 +76,13 @@
         </receiver>
 
         <service
+            android:exported="true"
             android:name="com.taobao.accs.internal.AccsJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:process=":channel"/>
 
         <service
+            android:exported="true"
             android:name="com.taobao.accs.ChannelService$KernelService"
             android:process=":channel" />
 
@@ -170,7 +174,9 @@
 
         <!-- 魅族 start-->
         <!--push应用定义消息receiver声明 -->
-        <receiver android:name="cn.ymex.kitx.tps.umeng.MeizuMessageReceiver">
+        <receiver
+            android:exported="true"
+            android:name="cn.ymex.kitx.tps.umeng.MeizuMessageReceiver">
             <intent-filter>
                 <!-- 接收push消息 -->
                 <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
