--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".umeng.UmengActivity" android:exported="false"/>
+        <activity
+            android:name=".umeng.UmengActivity"
+            android:exported="false"/>
         <activity
             android:exported="true"
             android:name=".MainActivity">
