--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,11 @@ buildscript {
                         version: "1.0.2",
                         bintray: true
                 ],
-                umeng  : [
-                        name   : "umeng",
-                        version: "0.0.3",
-                        bintray: true
-                ],
+//                umeng  : [
+//                        name   : "umeng",
+//                        version: "0.0.3",
+//                        bintray: true
+//                ],
                 start  : [
                         name   : "start",
                         version: "0.1.1",
@@ -50,7 +50,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.huawei.agconnect:agcp:1.4.2.300'
+       // classpath 'com.huawei.agconnect:agcp:1.4.2.300'
     }
 }
 
